<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">iTalkBB TV</string>
    <string name="copyright">Copyright © iTalkBB.com All rights reserved</string>
    <string name="tip_login1">iTalkBB 任意产品用户可使用原账号密码直接登录</string>
    <string name="tip_login2">您也可以使用常用邮箱注册新账户，获取个性化内容推荐。每个账户只支持同时使用一个用户端进行观看。</string>
    <string name="tip_signup1">继续代表已同意</string>
    <string name="tip_signup2">《iTalkBB 服务条款》</string>
    <string name="login_forgetpsd">忘记密码</string>
    <string name="tip_goto_login1">已注册用户</string>
    <string name="tip_goto_login2">点击登录</string>
    <string name="tip_authorization">是否信任该网站的证书</string>
    <string name="auto_login_failed">自动登录失败,请手动登录</string>
    <string name="signup_free">免费注册</string>
    <string name="signin_tip">温馨提示：iTalkBB 用户可直接登录</string>
    <string name="signin">登录</string>
    <string name="skip">跳过注册</string>
    <string name="recommend">推荐</string>
    <string name="home">首页</string>
    <string name="drama">剧集</string>
    <string name="zype_drama">电视剧</string>
    <string name="zype_america">北美</string>
    <string name="zype_carton">动画</string>
    <string name="variety">综艺</string>
    <string name="live">直播</string>
    <string name="audio">曲艺杂谈</string>
    <string name="film">电影</string>
    <string name="news">新闻</string>
    <string name="special">专题</string>
    <string name="voice">音频</string>
    <string name="hot">热门</string>
    <string name="play">播放</string>
    <string name="collect">收藏</string>
    <string name="collect_success">已收藏</string>
    <string name="cancel_collect_success">已取消收藏</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="collect_fail">收藏失败</string>
    <string name="all">全部</string>
    <string name="close">X</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="loading">加载中</string>
    <string name="network_disconnected">网络连接失败，请检查网络状况</string>
    <string name="network_disconnected_video_tips">网络连接失败，视频无法加载</string>
    <string name="network_abnormal">当前网络不畅，请检查网络</string>
    <string name="request_data_failed">数据加载失败，请稍候再试</string>
    <string name="search_no_result">很抱歉，没有搜索到相关内容</string>
    <string name="search_no_result_part1">很抱歉，没有搜索到与</string>
    <string name="search_no_result_part2">相关的内容</string>
    <string name="off_shelf">抱歉，该视频不存在，请尝试观看其他内容</string>
    <string name="network_error">当前无网络</string>
    <string name="click_to_retry">点击重新加载</string>
    <string name="launcher_skip_ad">跳过广告</string>
    <string name="launcher_copyright">Copyright © iTalkBB.com All rights reserved</string>
    <string name="main_btn_home">首页</string>
    <string name="main_btn_user">我的</string>
    <string name="exit_app_tips">再按一次返回键退出</string>
    <string name="home_card_group_change">换一换</string>
    <string name="home_card_group_more">更多</string>
    <string name="main_recent_play_toast">观看至</string>
    <string name="main_banner_category">活动</string>
    <string name="search_type">类型:</string>
    <string name="search_date">年份:</string>
    <string name="search_director">导演:</string>
    <string name="search_actor">主演:</string>
    <string name="search_presider">主持人:</string>
    <string name="search_related">的相关</string>
    <string name="play_default_time">00:00</string>
    <string name="play_definition_low">极速</string>
    <string name="play_definition_medium">流畅</string>
    <string name="play_definition_high">高清</string>
    <string name="play_first_tips_sound">调节音量</string>
    <string name="play_first_tips_brightness">调节明暗</string>
    <string name="play_series">选集</string>
    <string name="play_detail_category">类型:</string>
    <string name="play_detail_actor">主演:</string>
    <string name="play_detail_director">导演:</string>
    <string name="play_detail_release_date">上映日期:</string>
    <string name="play_detail_presider">主持人:</string>
    <string name="play_detail_mc">主播:</string>
    <string name="play_detail_intro">简介:</string>
    <string name="play_update_to">更新至</string>
    <string name="play_episode">集</string>
    <string name="play_all">全部</string>
    <string name="play_playing_tag">正在播放</string>
    <string name="play_program_list">回看列表</string>
    <string name="play_channel_list">直播列表</string>
    <string name="play_the_day_before_yesterday">前天</string>
    <string name="play_yesterday">昨天</string>
    <string name="play_today">今天</string>
    <string name="play_vod">正在回看</string>
    <string name="play_program_empty">该频道无法提供回看内容</string>
    <string name="play_back_to_live">回到直播</string>
    <string name="play_continue">继续观看</string>
    <string name="play_continue_to_play">继续播放</string>
    <string name="play_continue_tips_last">上次播放至</string>
    <string name="play_tips_network_poor">  当前网络环境不佳  </string>
    <string name="play_tips_network_switch_sd">  当前网络环境不佳，建议切换为极速模式观看  </string>
    <string name="play_tips_player_error">网络出错或其他原因导致\n无法播放，请返回重试</string>
    <string name="play_tips_using_carrier">当前正使用运营商流量播放，将可能\n会产生流量费，是否继续观看？</string>
    <string name="play_series_prefix">第</string>
    <string name="play_series_suffix">集</string>
    <string name="play_share_slogan">iTalkBBTV海外看视频高清免费无广告</string>
    <string name="play_more_detail_open">展开</string>
    <string name="play_more_detail_close">收起</string>
    <string name="search_bar_default">片名、演员名字等</string>
    <string name="search_exit">返回</string>
    <string name="search_history">历史搜索</string>
    <string name="search_clear">清空历史</string>
    <string name="search_hot">热门搜索</string>
    <string name="refresh_widget_no_more_data">已经到底啦~</string>
    <string name="pushmsg_center_no_more_msg">已经是最后一条内容了</string>
    <string name="pushmsg_center_pull_up_text">释放更新</string>
    <string name="pushmsg_center_pull_down_text">下拉刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">数据加载中..</string>
    <string name="xsearch_loading">正在加载中…</string>
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <string name="picture_image_loading">正在加载…</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">释放更新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="pref_title_general">General</string>
    <string name="pref_key_enable_background_play">pref.enable_background_play</string>
    <string name="pref_title_enable_background_play">Enable background play</string>
    <string name="pref_summary_enable_background_play">need Android 4.0+</string>
    <string name="pref_key_using_android_player">pref.using_android_player</string>
    <string name="pref_title_using_android_player">Using system player</string>
    <string name="pref_summary_using_android_player"></string>
    <string name="pref_key_player">pref.player</string>
    <string name="pref_title_player">Choose Player</string>
    <string-array name="pref_entries_player">
        <item>Auto Select</item>
        <item>AndroidMediaPlayer</item>
        <item>IjkMediaPlayer</item>
        <item>IjkExoMediaPlayer</item>
    </string-array>
    <string-array name="pref_entry_values_player">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_entry_summaries_player">
        <item>Auto Select</item>
        <item>AndroidMediaPlayer</item>
        <item>IjkMediaPlayer</item>
        <item>IjkExoMediaPlayer</item>
    </string-array>
    <string name="pref_title_ijkplayer_video">Video: ijkplayer</string>
    <string name="pref_key_using_media_codec">pref.using_media_codec</string>
    <string name="pref_title_using_media_codec">Using MediaCodec</string>
    <string name="pref_summary_using_media_codec"></string>
    <string name="pref_key_using_media_codec_auto_rotate">pref.using_media_codec_auto_rotate</string>
    <string name="pref_title_using_media_codec_auto_rotate">Using MediaCodec auto rotate</string>
    <string name="pref_summary_using_media_codec_auto_rotate"></string>
    <string name="pref_key_media_codec_handle_resolution_change">pref.media_codec_handle_resolution_change</string>
    <string name="pref_title_media_codec_handle_resolution_change">MediaCodec handle resolution change</string>
    <string name="pref_summary_media_codec_handle_resolution_change"></string>
    <string name="pref_key_pixel_format">pref.pixel_format</string>
    <string name="pref_title_pixel_format">Pixel Format</string>
    <string-array name="pref_entries_pixel_format">
        <item>Auto Select</item>
        <item>RGB 565</item>
        <item>RGB 888</item>
        <item>RGBX 8888</item>
        <item>YV12</item>
        <item>OpenGL ES2</item>
    </string-array>
    <string-array name="pref_entry_values_pixel_format">
        <item></item>
        <item>fcc-rv16</item>
        <item>fcc-rv24</item>
        <item>fcc-rv32</item>
        <item>fcc-yv12</item>
        <item>fcc-_es2</item>
    </string-array>
    <string-array name="pref_entry_summaries_pixel_format">
        <item>Auto Select</item>
        <item>RGB 565</item>
        <item>RGB 888</item>
        <item>RGBX 8888</item>
        <item>YV12</item>
        <item>OpenGL ES2</item>
    </string-array>
    <string name="pref_title_ijkplayer_audio">Audio: ijkplayer</string>
    <string name="pref_key_using_opensl_es">pref.using_opensl_es</string>
    <string name="pref_title_using_opensl_es">Using OpenSL ES</string>
    <string name="pref_summary_using_opensl_es"></string>
    <string name="pref_title_render_view">RenderView</string>
    <string name="pref_key_enable_no_view">pref.enable_no_view</string>
    <string name="pref_title_enable_no_view">Enable NoView</string>
    <string name="pref_summary_enable_no_view"></string>
    <string name="pref_key_enable_surface_view">pref.enable_surface_view</string>
    <string name="pref_title_enable_surface_view">Enable SurfaceView</string>
    <string name="pref_summary_enable_surface_view"></string>
    <string name="pref_key_enable_texture_view">pref.enable_texture_view</string>
    <string name="pref_title_enable_texture_view">Enable TextureView</string>
    <string name="pref_summary_enable_texture_view"></string>
    <string name="pref_key_enable_detached_surface_texture">pref.enable_detached_surface_texture</string>
    <string name="pref_title_enable_detached_surface_texture">Enable detached SurfaceTexture</string>
    <string name="user_login">登录</string>
    <string name="user_login_international">登录</string>
    <string name="user_clear_cache">清除缓存</string>
    <string name="user_msg">消息推送</string>
    <string name="user_wifi">非wifi操作提醒</string>
    <string name="user_wifi_once">一次</string>
    <string name="user_wifi_always">总是</string>
    <string name="user_signup">注册</string>
    <string name="login_out">退出登录</string>
    <string name="recent_record">最近播放</string>
    <string name="watch_now">立即观看</string>
    <string name="watch_first">看看再说</string>
    <string name="take_photo">拍照</string>
    <string name="check_from_gallery">从手机相册选择</string>
    <string name="cancel_change">取消</string>
</resources>